<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:tools="http://schemas.android.com/tools">


    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ratedFriendPhotoIv"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/nopicture"
            tools:ignore="MissingConstraints" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/tursunov_manuchekhr"
              android:id="@+id/ratedFriendNameTv"
              android:textSize="16sp"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toTopOf="@+id/ratedFriendPhotoIv"
              app:layout_constraintStart_toEndOf="@+id/ratedFriendPhotoIv" android:layout_marginLeft="12dp"
              android:layout_marginStart="12dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/_3_hours_ago"
              android:id="@+id/ratedFriendDateTv"
              app:layout_constraintTop_toTopOf="@+id/ratedFriendNameTv"
              app:layout_constraintBottom_toBottomOf="@+id/ratedFriendNameTv"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/friendNameTv"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
              app:layout_constraintHorizontal_bias="0.741" app:layout_constraintVertical_bias="1.0"/>

    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
              android:text="@string/label_desc"
              android:ellipsize="end"
              android:maxLines="1"
              android:id="@+id/ratedFriendDescTv"
              android:textSize="18sp"
              android:textColor="#000"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/ratedFriendNameTv"
              app:layout_constraintStart_toEndOf="@+id/ratedFriendPhotoIv" android:layout_marginStart="12dp"
              android:layout_marginLeft="12dp" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="@+id/ratedFriendPhotoIv"/>

</android.support.constraint.ConstraintLayout>