<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/friendPhotoIv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/nopicture"
            tools:ignore="MissingConstraints" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/tursunov_manuchekhr"
              android:id="@+id/friendNameTv"
              android:textSize="18sp"
              android:textColor="#000"
              android:layout_marginTop="5dp"
              app:layout_constraintTop_toTopOf="@+id/friendPhotoIv"
              app:layout_constraintStart_toEndOf="@+id/friendPhotoIv" android:layout_marginLeft="12dp"
              android:visibility="visible"
              android:layout_marginStart="12dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/label_phone"
              android:id="@+id/friendPhoneTv"
              android:textColor="#000"
              android:textSize="16sp"
              android:visibility="gone"
              android:layout_marginTop="17dp"
              app:layout_constraintTop_toTopOf="@+id/friendPhotoIv"
              app:layout_constraintStart_toEndOf="@+id/friendPhotoIv" android:layout_marginLeft="12dp"
              android:layout_marginStart="12dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/_3_hours_ago"
              android:id="@+id/friendDateTv"

              app:layout_constraintTop_toBottomOf="@+id/friendNameTv"
              app:layout_constraintStart_toStartOf="@+id/friendNameTv" />

    <ImageView android:layout_width="24dp"
               android:layout_height="24dp"
               app:srcCompat="@drawable/ic_cancel"
               android:id="@+id/hasAppIv"
               android:contentDescription="TODO"
               app:layout_constraintTop_toTopOf="@+id/friendNameTv"
               app:layout_constraintStart_toEndOf="@+id/friendNameTv" android:layout_marginLeft="8dp"
               android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/friendNameTv"/>


</android.support.constraint.ConstraintLayout>