<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/root_layout" android:background="@drawable/animated_gradient_list">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/imgWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="30dp"
            app:layout_constraintBottom_toTopOf="@+id/descWrapper"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageView
                android:id="@+id/iconApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rating_friends"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/iconSignIn" android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/descWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/imgWrapper"
            app:layout_constraintBottom_toTopOf="@+id/footerWrapper"
            tools:ignore="MissingConstraints">
        <android.support.constraint.ConstraintLayout
                android:id="@+id/titleWrapper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/titleDescWrapper">
            <TextView
                    android:id="@+id/title_tv"
                    style="@style/TitleSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TitleSignIn"
                    android:textColor="@color/TitleColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
                android:id="@+id/titleDescWrapper"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@+id/titleWrapper"
                app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                    android:id="@+id/title_desc_tv"
                    style="@style/TitleDescSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/TitleDescSignIn"
                    android:textColor="@color/TitleColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/footerWrapper"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descWrapper"
            tools:ignore="MissingConstraints">
        <Button
                android:id="@+id/phoneSignInBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_phone_android"
                android:background="@drawable/btn_rounded_phone_back"
                android:text="@string/phone_signInButton"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableStart="@drawable/ic_phone_android" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:id="@+id/facebookSignInBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/btn_rounded_background"
                android:text="@string/sign_InButton"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                android:layout_marginTop="12dp"
                android:drawableLeft="@drawable/ic_facebook"

                app:layout_constraintTop_toBottomOf="@+id/phoneSignInBtn"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
