<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/animated_gradient_list"

                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_keyboard_backspace"
            android:contentDescription="@string/iconSignIn"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
        <ImageView
                android:id="@+id/iconApp"
                android:layout_width="210dp"
                android:layout_height="197dp"
                android:layout_gravity="center"
                android:padding="30dp"
                android:src="@drawable/rating_friends"
                android:contentDescription="@string/iconSignIn"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/backBtn" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
        />

        <!-- Email Label -->
        <EditText android:id="@+id/phoneSignInEdt"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="phone"
                  android:padding="15dp"
                  android:background="@android:color/white"
                  android:hint="@string/phone_number"
                  android:layout_margin="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/iconApp" app:layout_constraintStart_toStartOf="@+id/backBtn"
                  app:layout_constraintEnd_toEndOf="parent"
        />

        <Button
                android:id="@+id/phoneSignInStep1Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_rounded_phone_back"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@+id/phoneSignInEdt"
                app:layout_constraintStart_toStartOf="@+id/phoneSignInEdt"
                app:layout_constraintEnd_toEndOf="@+id/phoneSignInEdt"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>