<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient1"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userAvatarIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/nopicture"
                tools:ignore="MissingConstraints"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/user_name"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/userAvatarIv"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:id="@+id/usernameTv" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/logout"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_wh"
                app:layout_constraintTop_toBottomOf="@+id/usernameTv"
                app:layout_constraintStart_toStartOf="@+id/usernameTv"
                android:id="@+id/logoutBtn"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                android:textStyle="bold"
                android:text="@string/_diamond_count"
                android:textColor="@color/white"
                android:id="@+id/diamondCountTv"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/imageView" android:layout_marginRight="8dp"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
        />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_diamond"
                app:layout_constraintTop_toTopOf="@+id/logoutBtn"
                app:layout_constraintBottom_toBottomOf="@+id/logoutBtn"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp" android:id="@+id/imageView"/>


    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/ratedListRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>


</android.support.constraint.ConstraintLayout>