<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent1"
>

    <TextView
            android:id="@+id/qaCount"
            android:text="@string/_4_6"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               app:srcCompat="@drawable/ic_qa"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
               android:layout_marginTop="12dp"
               app:layout_constraintTop_toBottomOf="@+id/qaCount" android:id="@+id/imageView2"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="23sp"
              android:textColor="@color/white"
              android:text="Loves Justin Bieber"
              android:layout_marginTop="12dp"
              app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginRight="8dp" android:id="@+id/textView"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/firstButtonWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/secondButtonWrapper"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
                android:id="@+id/friend1Btn"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_wh"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/secondButtonWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@+id/firstButtonWrapper"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
                android:id="@+id/friend2Btn"
                android:background="@drawable/rounded_wh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/thirdButtonWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/secondButtonWrapper"
            app:layout_constraintTop_toBottomOf="@+id/firstButtonWrapper">

        <Button
                android:id="@+id/friend3Btn"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_wh"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/forthButtonWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/thirdButtonWrapper"
            app:layout_constraintTop_toBottomOf="@+id/secondButtonWrapper">

        <Button
                android:id="@+id/friend4Btn"
                android:background="@drawable/rounded_wh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>


    <Button
            android:id="@+id/shuffleBtn"
            android:background="@drawable/rounded_wh"
            android:layout_width="wrap_content"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/shuffle"
            android:drawableLeft="@drawable/ic_shuffle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/forthButtonWrapper"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/thirdButtonWrapper"/>

    <Button
            android:id="@+id/skipNextBtn"
            android:background="@drawable/rounded_wh"
            android:layout_width="wrap_content"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:text="@string/skip"
            android:drawableLeft="@drawable/ic_skip_next"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/forthButtonWrapper"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/forthButtonWrapper" android:layout_marginLeft="8dp"/>



</android.support.constraint.ConstraintLayout>